# midi_to_mikrotik_converter

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  main.cpp  midi_to_mikrotik_converter.cbp  midi_to_mikrotik_converter.depend  midi_to_mikrotik_converter.layout
.github/workflows/: cmake.yml
include/: ByteStream.h  ByteStream.hpp  ChanneledTrack.hpp  Event.h  Event.hpp  EventTempo.h  EventTempo.hpp  MTrkChunk.h  MTrkChunk.hpp  MetaEventText.h  MetaEventText.hpp  MidiEvent.h  MidiEvent.hpp  MidiEventCode.h  MidiEventCode.hpp  MidiFile.h  MidiFile.hpp  MidiMetaEvent.h  MidiMetaEvent.hpp  MidiTrack.hpp  Mikrotik.h  Mikrotik.hpp  MikrotikAudioScript.hpp  MikrotikNote.hpp  MikrotikTrack.hpp  MthdHeader.h  MthdHeader.hpp  MtrkHeader.h  MtrkHeader.hpp  Note.h  Note.hpp  NoteTrack.hpp  Utils.hpp  VLV.h  VLV.hpp
src/: ByteStream.cpp  ChannelAnalyzer.hpp  Config.hpp  Event.cpp  EventTempo.cpp  MTrkChunk.cpp  MetaEventText.cpp  MidiEvent.cpp  MidiEventCode.cpp  MidiFile.cpp  MidiMetaEvent.cpp  MidiTrack.cpp  Mikrotik.cpp  MikrotikNote.hpp  MikrotikTrack.cpp  MikrotikTrack.hpp  MthdHeader.cpp  MtrkHeader.cpp  Note.cpp  NoteTrack.cpp  Sequence.hpp  TrackAnalyzer.hpp  Utils.cpp  Utils.hpp  VLV.cpp  midi-to-mikrotik-converter.cpp
test-files/midi/: Imperial March.mid  Jingle bells.mid  Jingle bells_patched.mid  later_bitches.mid  later_bitches_test.mid  long_notes.mid  overlayed_notes.mid  overlayed_notes_variant_3.mid  predelay_fl_test.mid  skibidi.mid  two_notes_simultaneously.mid  where_is_my_mind_multilayered.mid
